# satsplit

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_donations.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: bills.py  donations.py  participants.py  stats.py
backend/app/services/: bill_service.py  btcpay.py  exchange.py  lnurl.py
backend/tests/: conftest.py  test_api.py  test_exchange.py
frontend/: .dockerignore  Caddyfile  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: bill-flow.spec.ts
frontend/src/: App.tsx  api.ts
frontend/src/__tests__/: BillForm.test.tsx  BillSummary.test.tsx  InvoiceDisplay.test.tsx  JoinForm.test.tsx  ParticipantList.test.tsx  ProgressBar.test.tsx  ShareLink.test.tsx  ViewBill.test.tsx  api.test.ts  setup.ts
frontend/src/components/: BillForm.tsx  BillSummary.tsx  InvoiceDisplay.tsx  JoinForm.tsx  Layout.tsx  ParticipantList.tsx  ProgressBar.tsx  ShareLink.tsx
frontend/src/hooks/: usePollStatus.ts
frontend/src/pages/: About.tsx  CreateBill.tsx  NotFound.tsx  Stats.tsx  ViewBill.tsx
