[project]
name = "satsplit"
version = "0.1.0"
description = "Bill splitting app using Bitcoin Lightning"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128",
    "uvicorn[standard]>=0.40",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "httpx>=0.28",
    "pydantic-settings>=2.12",
    "shortuuid>=1.0",
    "bolt11>=2.2",
    "cachetools>=7.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-httpx>=0.36",
    "aiosqlite>=0.22",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"
